--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rakesh Emuru
-logo: "/images/rakesh_emuru.JPG?raw=true"
+logo: "/Images/rakesh_emuru.JPG?raw=true"
 description: >
   Master's candidate at the University of Delaware specializing in Data Science. Proven track record in harnessing machine learning models, backed by full-stack development expertise at Trendlyne. Successfully automated and optimized data solutions serving millions. Actively seeking Data Science internships to further refine and apply my ML skills.
   <br><br>
