--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Rakesh Emuru
+title: Rakesh Emurus
 logo: "https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Images/rakesh_emuru.jpg?raw=true"
 description: >
-  Master's candidate at the University of Delaware specializing in Data Science. Proven track record in harnessing machine learning models, backed by full-stack development expertise at Trendlyne. Successfully automated and optimized data solutions serving millions. Actively seeking Data Science internships to further refine and apply my ML skills.
+  Master's candidate at the University of Delaware specializing in Data Science. Proven track record in harnessing machine learning models, backed by full-stack development expertise at Trendlyne. Successfully automated and optimized data solutions serving millions. Actively seeking Data Science internships to further refine and apply my Data Science skills.
   <br><br>
   <a href="https://www.linkedin.com/in/rakesh-emuru/">Connect on LinkedIn</a> 
-  
+  <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing">View My Resume</a>
+  <a href="mailto:emururakesh@gmail.com">Send me an email!</a>
+
 theme: jekyll-theme-minimal
