--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Rakesh Emurus
-logo: "https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Images/rakesh_emuru.jpg?raw=true"
+title: <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing" title="Rakesh Emuru Resume">Rakesh Emuru</a>
+logo: <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing" title="Rakesh Emuru - Click to view resume"><img src="https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Images/rakesh_emuru.jpg?raw=true" alt="Rakesh Emuru's Image"></a>
 description: >
-  Master's candidate at the University of Delaware specializing in Data Science. Proven track record in harnessing machine learning models, backed by full-stack development expertise at Trendlyne. Successfully automated and optimized data solutions serving millions. Actively seeking Data Science internships to further refine and apply my Data Science skills.
+  I am Rakesh Emuru, a Master's candidate at the <strong>University of Delaware</strong> with a specialization in <strong>Data Science</strong>. I possess a strong background in harnessing machine learning models, complemented by full-stack development expertise gained during my time at Trendlyne. I have successfully automated and optimized data solutions that serve millions. I'm actively seeking Data Science internships to further refine and utilize my Data Science skills.
   <br><br>
-  <a href="https://www.linkedin.com/in/rakesh-emuru/">Connect on LinkedIn</a> 
-  <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing">View My Resume</a>
-  <a href="mailto:emururakesh@gmail.com">Send me an email!</a>
+  <a href="https://www.linkedin.com/in/rakesh-emuru/" title="Connect with Rakesh Emuru on LinkedIn">Connect on LinkedIn</a> <br><br>
+  <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing" title="View Rakesh Emuru's Resume">View My Resume</a><br><br>
+  <a href="mailto:emururakesh@gmail.com" title="Send an email to Rakesh Emuru">Send me an email!</a>
 
 theme: jekyll-theme-minimal
