--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rakesh Emuru
-logo: <a href="https://drive.google.com/file/d/1HrBh4oG_-ewszVel0Hvx-YLdCyhcPNP9/view?usp=sharing" title="Rakesh Emuru - Click to view resume"><img src="https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Images/rakesh_emuru.jpg?raw=true" alt="Rakesh Emuru's Image"></a>
+logo: <img src="https://github.com/rakesh-emuru/rakesh-emuru.github.io/blob/main/Images/rakesh_emuru.jpg?raw=true" alt="Rakesh Emuru's Image"></a>
 description: >
   I am Rakesh Emuru, a Master's candidate at the <strong>University of Delaware</strong> with a specialization in <strong>Data Science</strong>. I possess a strong background in harnessing machine learning models, complemented by full-stack development expertise gained during my time at Trendlyne. I have successfully automated and optimized data solutions that serve millions. I'm actively seeking Data Science internships to further refine and utilize my Data Science skills.
   <br><br>
